--- a/package.json
+++ b/package.json
@@ -30,9 +30,14 @@
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^17.3.1",
+    "grunt-git": "^0.3.7",
     "grunt-mocha-test": "^0.10.0",
     "grunt-nodemon": "^0.2.1",
     "grunt-shell": "^0.6.4",
-    "grunt-git": "^0.3.7"
+    "https": "^1.0.0",
+    "morgan": "^1.6.1",
+    "nodemon": "^1.8.1",
+    "request": "^2.69.0",
+    "underscore": "^1.8.3"
   }
 }
