--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "morgan": "^1.6.1",
+    "mysql": "^2.4.2",
     "nodemon": "^1.8.1",
     "request": "^2.69.0",
     "underscore": "^1.8.3",
