Create intial basic server, added NPM start to server file  Changes to be committed: 	modified:   package.json 	modified:   src/server/server.js

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A sublime plugin for Git Workflow",
   "main": "",
   "scripts": {
+    "start" : "node src/server/server.js"
   },
   "repository": {
     "type": "git",
