Add DB scripts  Changes to be committed: 	new file:   dropDB.sql 	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "A sublime plugin for Git Workflow",
   "main": "",
   "scripts": {
-    "start" : "node src/server/server.js"
-  },
+    "start" : "node src/server/server.js",
+    "dropDB": "mysql -u root -p < server/dropDB.sql",
+    "initDB": "mysql -u root -p < src/server/schema.sql",
+    "openDB": "mysql -u root -p app"
+    },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AudibleBoulders/AudibleBoulders.git"
@@ -24,6 +27,7 @@
     "nodemon": "^1.8.1",
     "request": "^2.69.0",
     "underscore": "^1.8.3",
+    "fs": "0.0.2",
     "grunt": "^0.4.4",
     "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-cssmin": "^0.9.0",
