--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
 {
   // I want to use babel-eslint for parsing!
   "extends": "airbnb",
+  "prefer-es6-class": [1, "never"],
   "parser": "babel-eslint",
   "env": {
     // I write for browser
