--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
   "extends": "airbnb",
   "prefer-es6-class": [0],
   "parser": "babel-eslint",
+  "prop-types": [1, { ignore: ['children']}],
   "env": {
     // I write for browser
     "browser": true,
@@ -18,5 +19,5 @@
     "eol-last": [0],
     "no-mixed-requires": [0],
     "no-underscore-dangle": [0]
-  }
+  },
 }
