--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "description": "A sublime plugin for Git Workflow",
   "main": "",
   "scripts": {
-<<<<<<< HEAD
-    "start" : "node src/server/server.js",
+    // "start" : "node src/server/server.js",
     "dropDB": "mysql -u root -p < server/dropDB.sql",
     "initDB": "mysql -u root -p < src/server/schema.sql",
     "openDB": "mysql -u root -p app"
     },
-=======
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:dev": "webpack-dev-server --inline --content-base public/ --history-api-fallback",
     "start:prod": "npm run build && node server.bundle.js",
     "build:client": "webpack",
     "build:server": "webpack --config webpack.server.config.js",
-    "build": "npm run build:client && npm run build:server"
+    "build": "npm run build:client && npm run build:server",
+    "lint": "eslint src"
   },
->>>>>>> React router is now working
+  "pre-commit": [
+    "lint"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AudibleBoulders/AudibleBoulders.git"
@@ -51,24 +52,21 @@
     "grunt-mocha-test": "^0.10.0",
     "grunt-nodemon": "^0.2.1",
     "grunt-shell": "^0.6.4",
-<<<<<<< HEAD
     "https": "^1.0.0",
-    "morgan": "^1.6.1",
-    "nodemon": "^1.8.1",
-    "request": "^2.69.0",
-    "underscore": "^1.8.3"
-=======
     "grunt-git": "^0.3.7"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
+    "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "eslint": "^2.4.0",
+    "eslint-config-airbnb": "^6.1.0",
+    "eslint-plugin-react": "^4.2.1",
     "http-server": "^0.8.5",
     "pre-commit": "^1.1.2",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
->>>>>>> React router is now working
   }
 }
