--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
   "description": "A sublime plugin for Git Workflow",
   "main": "",
   "scripts": {
-    // "start" : "node src/server/server.js",
-    "dropDB": "mysql -u root -p < server/dropDB.sql",
-    "initDB": "mysql -u root -p < src/server/schema.sql",
-    "openDB": "mysql -u root -p app"
-    },
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:dev": "webpack-dev-server --inline --content-base public/ --history-api-fallback",
     "start:prod": "npm run build && node server.bundle.js",
     "build:client": "webpack",
     "build:server": "webpack --config webpack.server.config.js",
     "build": "npm run build:client && npm run build:server",
+    "dropDB": "mysql -u root -p < server/dropDB.sql",
+    "initDB": "mysql -u root -p < src/server/schema.sql",
+    "openDB": "mysql -u root -p app",
     "lint": "eslint src"
   },
   "pre-commit": [
@@ -52,8 +50,8 @@
     "grunt-mocha-test": "^0.10.0",
     "grunt-nodemon": "^0.2.1",
     "grunt-shell": "^0.6.4",
-    "https": "^1.0.0",
-    "grunt-git": "^0.3.7"
+    "grunt-git": "^0.3.7",
+    "https": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
