--- a/package.json
+++ b/package.json
@@ -4,19 +4,13 @@
   "description": "A sublime plugin for Git Workflow",
   "main": "",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:dev": "webpack-dev-server --inline --content-base public/ --history-api-fallback",
-    "start:prod": "npm run build && node server.bundle.js",
-    "build:client": "webpack",
-    "build:server": "webpack --config webpack.server.config.js",
-    "build": "npm run build:client && npm run build:server",
+    "start": "nodemon src/server/server.js",
     "dropDB": "mysql -u root -p < server/dropDB.sql",
     "initDB": "mysql -u root -p < src/server/schema.sql",
     "openDB": "mysql -u root -p app",
     "lint": "eslint src"
   },
   "pre-commit": [
-    "lint"
   ],
   "repository": {
     "type": "git",
@@ -27,11 +21,8 @@
   "bugs": {
     "url": "https://github.com/AudibleBoulders/issues"
   },
-  "homepage": "https://github.com/AudibleBoulders/#readme",
+  "homepage": "http://www.gitspy.com/",
   "dependencies": {
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-router": "^2.0.0",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "morgan": "^1.6.1",
@@ -39,7 +30,11 @@
     "nodemon": "^1.8.1",
     "request": "^2.69.0",
     "underscore": "^1.8.3",
-    "fs": "0.0.2",
+    "fs": "0.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^2.4.0",
+    "eslint-config-airbnb": "^6.1.0",
     "grunt": "^0.4.4",
     "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-cssmin": "^0.9.0",
@@ -51,20 +46,6 @@
     "grunt-nodemon": "^0.2.1",
     "grunt-shell": "^0.6.4",
     "grunt-git": "^0.3.7",
-    "https": "^1.0.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.5.1",
-    "babel-eslint": "^5.0.0",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "eslint": "^2.4.0",
-    "eslint-config-airbnb": "^6.1.0",
-    "eslint-plugin-react": "^4.2.1",
-    "http-server": "^0.8.5",
-    "pre-commit": "^1.1.2",
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
+    "pre-commit": "^1.1.2"
   }
 }
