Change jshint params  Changes to be committed: 	modified:   .jshintrc 	modified:   src/client/app/app.js 	modified:   src/server/server.js

--- a/.jshintrc
+++ b/.jshintrc
@@ -50,5 +50,8 @@
    */
 
   // Suppress warnings about == null comparisons.
-  "eqnull": true
+  "eqnull": true,
+
+  // Sets "angular" as a predefined variable
+  "predef": ["angular"]
 }
