--- a/bower.json
+++ b/bower.json
@@ -19,8 +19,12 @@
     "src/client/lib"
   ],
   "dependencies": {
-    "angular": "~1.3.16",
-    "angular-route": "~1.3.16",
-    "angular-mocks": "~1.3.16"
+    "angular": null,
+    "angular-route": null,
+    "angular-mocks": null,
+    "angular-cookies": null
+  },
+  "resolutions": {
+    "angular": null
   }
 }
