Added socket io to project. Also navigate user from add page to dashboard page

--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "angular": null,
     "angular-route": null,
     "angular-mocks": null,
-    "angular-cookies": null
+    "angular-cookies": null,
+    "angular-socket-io": "^0.7.0"
   },
   "resolutions": {
     "angular": null
