--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
     "request": "^2.69.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "sockets": "^0.4.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
