--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "initDB": "mysql -u root -p < src/server/schema.sql",
     "openDB": "mysql -u root -p app",
     "lint": "jshint src",
-    "test": "karma start karma.conf.js"
+    "test": "karma start karma.conf.js",
+    "forever" : "forever start src/server/server.js"
   },
   "pre-commit": [
     "lint"
