Move test files to /specs and edit paths for custom npm commands

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "nodemon src/server/server.js",
     "initDB": "mysql -u root -p < src/server/schema.sql",
     "openDB": "mysql -u root -p app",
-    "initTestDB": "mysql -u root < src/server/test-schema.sql",
-    "openTestDB": "mysql -u root -p test",
-    "addTestData": "npm run initTestDB && mysql -u root < src/server/test-data/test-data.sql",
+    "initTestDB": "mysql -u root < specs/server/test-schema.sql",
+    "openTestDB": "mysql -u root test",
+    "addTestData": "npm run initTestDB && mysql -u root < specs/test-data/test-data.sql",
     "lint": "jshint src",
     "test": "karma start karma.conf.js",
     "testQuery": "mocha specs/server/queries-spec.js",
